--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
-Lab2/slprj/sim/varcache/model/checksumOfCache.mat
-Lab2/slprj/sim/varcache/model/tmwinternal/simulink_cache.xml
-Lab2/slprj/sim/varcache/model/varInfo.mat
+Lab1/slprj/
+Lab2/slprj/
+*.slxc
+*.asv
